# clingofmt

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  example.lp
.github/: dependabot.yml
.github/workflows/: ci-test.yml  release.yml
src/: lib.rs  main.rs  tests.rs
