
[package]
name = "clingofmt"
version = "0.1.0"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "Tool to find and fix formatting issues in clingo files"
readme = "README.md"
repository = "https://github.com/potassco/clingofmt"
license = "MIT"
edition = "2021"
exclude = ["/.github"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
tree-sitter = "~0.20.0"
tree-sitter-clingo = "~0.0.10"
